@@ -32,6 +32,7 @@
   * added slave-tls-mode, slave-host-force-tls is now
     deprecated
   * fixed auto-index: add move-to paths for search
+  * fixed lost resources in --convert
   * BARConrol: fixed possible dead-lock in server
     communication
   * BARControl: added option --insecure-tls, improved
